Fix #119171: show node panels when they have ui even if they don't have sockets

Pull Request: https://projects.blender.org/blender/blender/pulls/119287